--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 body {
-  font-family: var(--font-poppins, ui-sans-serif), sans-serif;
+  font-family: 'Poppins', ui-sans-serif, sans-serif;
   background-color: #fdfdfd;
 }
 
